Published on NPM.

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ body {
   </pre>
   <p>There's also an npm installable version:</p>
   <pre>
-npm install doodlecss
+npm install doodle.css
   </pre>
   <p>There are also a bunch of other vectors you can use in <a href="./doodles.svg">doodles.svg</a>.</p>
   <p>You can also put a doodle box around anything using the class <code>.doodle .border</code> or <code>.doodle-border</code>.</p>
