Added social meta tags.

--- a/index.html
+++ b/index.html
@@ -28,6 +28,22 @@
     }
   </style>
   <link rel="stylesheet" href="doodle.css"/>
+
+  <!-- social -->
+  <meta content="https://chr15m.github.io/DoodleCSS/screenshot.png" name="twitter:image:src">
+  <meta content="@mccrmx" name="twitter:site">
+  <meta content="@mccrmx" name="twitter:creator">
+  <meta content="summary" name="twitter:card">
+  <meta content="Doodle CSS" name="twitter:title">
+  <meta content="A simple hand drawn HTML/CSS theme." name="twitter:description">
+
+  <meta content="https://chr15m.github.io/DoodleCSS/screenshot.png" property="og:image">
+  <meta content="Doodle CSS" property="og:site_name">
+  <meta content="website" property="og:type">
+  <meta content="Doodle CSS" property="og:title">
+  <meta content="https://chr15m.github.io/DoodleCSS/" property="og:url">
+  <meta content="A simple hand drawn HTML/CSS theme." property="og:description">
+
 </head>
 <body class="doodle">
 
