Fixed source link.

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <img src="figure.svg" style="border: none; margin: 1em; margin-right: 0px; float: right;"/>
   <p>A simple hand drawn HTML/CSS theme.</p>
   <p>By <a href="https://mccormick.cx">Chris McCormick</a> (<a href="https://twitter.com/mccrmx">@mccrmx</a>)</p>
-  <p>Get the <a href="https://github.com/chr15m/doodle-css">source code on GitHub</a>.</p>
+  <p>Get the <a href="https://github.com/chr15m/DoodleCSS">source code on GitHub</a>.</p>
 
   <h2>Quick demo</h2>
 
