Give checkboxes an id so the label can be clicked.
Fixes #1

--- a/index.html
+++ b/index.html
@@ -103,15 +103,15 @@
 
     <p>
       <div>
-        <label for="ch1">
-          <input type="checkbox" name="ch1">
+        <label>
+          <input type="checkbox" id="ch1">
           Checkbox one.
         </label>
       </div>
 
       <div>
-        <label for="ch2">
-          <input type="checkbox" name="ch2">
+        <label>
+          <input type="checkbox" id="ch2">
           Checkbox two.
         </label>
       </div>
@@ -439,20 +439,20 @@ npm install doodle.css
       <fieldset>
         <legend>I am also legend</legend>
         <p>
-          <input type="checkbox" name="ch1">
-          <label for="ch1">Check me out</label>
+          <input type="checkbox" name="check1" id="check1">
+          <label for="check1">Check me out</label>
         </p>
         <p>
-          <input type="checkbox" name="ch2">
-          <label for="ch2">Or check me out</label>
+          <input type="checkbox" name="check2" id="check2">
+          <label for="check2">Or check me out</label>
         </p>
         <p>
-          <input type="checkbox" name="ch3" disabled>
-          <label for="ch3">Or check me out but no click</label>
+          <input type="checkbox" name="check3" id="check3" disabled>
+          <label for="check3">Or check me out but no click</label>
         </p>
         <p>
-          <input type="checkbox" name="ch3" checked disabled>
-          <label for="ch3">I am checked but no click</label>
+          <input type="checkbox" name="check3" id="check3" checked disabled>
+          <label for="check3">I am checked but no click</label>
         </p>
       </fieldset>
       <p>
