resolved typo on line 360

--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@ npm install doodle.css
       </p>
       <p>
         <label for="example-input-color">Color</label>
-        <input id="example-inupt-color" type="color" placeholder="#fff">
+        <input id="example-input-color" type="color" placeholder="#fff">
       </p>
       <p>
         <label for="example-input-date">Date</label>
