Added sponsor link.

--- a/index.html
+++ b/index.html
@@ -155,6 +155,21 @@ npm install doodle.css
   <p>HTML coverage using <a href="https://github.com/dbox/html5-kitchen-sink/">HTML Kitchen Sink</a>.</p>
   <p>The font is <a href="http://www.fontsquirrel.com/fonts/short-stack">Short Stack</a>.</p>
 
+  <h2>Sponsor</h2>
+
+  <p>
+    <a href="https://gumroad.com/a/142499667/fULny">CSS Scan is the fastest and easiest way to check, copy and edit CSS</a>.
+  </p>
+
+  <p>
+    Goodbye to "Inspect Element" - Check the CSS of any element you hover over, instantly, and copy its entire rules with a single click.
+  </p>
+
+  <p>
+    Thanks to <a href="https://gumroad.com/a/142499667/fULny">CSS Scan</a> for sponsoring DoodleCSS!
+  </p>
+
+
   <h2>Other HTML Elements</h2>
   <hr>
   <section>
