Add sponsor buttons.

--- a/index.html
+++ b/index.html
@@ -55,6 +55,23 @@
   <p>By <a href="https://mccormick.cx">Chris McCormick</a> (<a href="https://twitter.com/mccrmx">@mccrmx</a>)</p>
   <p>Get the <a href="https://github.com/chr15m/DoodleCSS">source code on GitHub</a>.</p>
 
+  <h2>Support</h2>
+
+  <div style="text-align: center;">
+    <a href="https://ko-fi.com/chr15m" class="button"><button style="background-color: #FF5E5B; border-radius: 8px; font-size: 0.5em; color: white; display: inline-flex; align-items: center; cursor: pointer;">
+        <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" height="1em" viewBox="0 100 512 312" xml:space="preserve" style="margin-right: 0.5em;"><g><path d="M509.5,190.9c-16.5-87.2-103.7-98-103.7-98H15.4c-12.9,0-14.5,17-14.5,17s-1.7,156.3-0.4,252.3c3.5,51.6,55.2,57,55.2,57   s176.3-0.5,255.2-1.1c52-9.1,57.3-54.8,56.7-79.7C460.5,343.5,525.9,278,509.5,190.9L509.5,190.9z M273.5,265.8   c-26.6,30.9-85.6,84.8-85.6,84.8s-2.6,2.6-6.7,0.5c-1.6-1.2-2.2-1.9-2.2-1.9c-9.5-9.4-71.8-65-86.1-84.3   c-15.1-20.6-22.2-57.6-1.9-79.2c20.2-21.5,64.1-23.2,93.1,8.7c0,0,33.3-38,74-20.5C298.6,191.3,297.2,238,273.5,265.8z M405.2,276   c-19.8,2.5-35.9,0.6-35.9,0.6V155.4H407c0,0,42.1,11.8,42.1,56.3C449.1,252.5,428.1,268.6,405.2,276L405.2,276z" fill="white"/></g></svg>
+        Support on Ko-fi
+    </button></a>
+    <a href="https://patreon.com/chr15m" class="button"><button style="background-color: #FF5E5B; border-radius: 8px; font-size: 0.5em; color: white; display: inline-flex; align-items: center; cursor: pointer;">
+        <svg width="1em" height="1em" style="margin-right: 0.5em;" version="1.1" viewBox="0 0 569 546" xmlns="http://www.w3.org/2000/svg"><title>Patreon logo</title><g fill="white"><circle cx="362.589996" cy="204.589996" data-fill="1" r="204.589996"></circle><rect data-fill="1" height="545.799988" width="100" x="0" y="0"></rect></g></svg>
+        Support on Patreon
+    </button></a>
+    <a href="https://github.com/sponsors/chr15m" class="button"><button style="background-color: #3C3C3C; color: white; border-radius: 8px; font-size: 0.5em; display: inline-flex; align-items: center; cursor: pointer;">
+      <svg width="1em" height="1em" viewBox="0 0 1536 1498.4706" xmlns="http://www.w3.org/2000/svg" style="margin-right: 0.5em;"><path d="m768 0q209 0 385.5 103t279.5 279.5 103 385.5q0 251-146.5 451.5t-378.5 277.5q-27 5-40-7t-13-30q0-3 0.5-76.5t0.5-134.5q0-97-52-142 57-6 102.5-18t94-39 81-66.5 53-105 20.5-150.5q0-119-79-206 37-91-8-204-28-9-81 11t-92 44l-38 24q-93-26-192-26t-192 26q-16-11-42.5-27t-83.5-38.5-85-13.5q-45 113-8 204-79 87-79 206 0 85 20.5 150t52.5 105 80.5 67 94 39 102.5 18q-39 36-49 103-21 10-45 15t-57 5-65.5-21.5-55.5-62.5q-19-32-48.5-52t-49.5-24l-20-3q-21 0-29 4.5t-5 11.5 9 14 13 12l7 5q22 10 43.5 38t31.5 51l10 23q13 38 44 61.5t67 30 69.5 7 55.5-3.5l23-4q0 38 0.5 88.5t0.5 54.5q0 18-13 30t-40 7q-232-77-378.5-277.5t-146.5-451.5q0-209 103-385.5t279.5-279.5 385.5-103zm-477 1103q3-7-7-12-10-3-13 2-3 7 7 12 9 6 13-2zm31 34q7-5-2-16-10-9-16-3-7 5 2 16 10 10 16 3zm30 45q9-7 0-19-8-13-17-6-9 5 0 18t17 7zm42 42q8-8-4-19-12-12-20-3-9 8 4 19 12 12 20 3zm57 25q3-11-13-16-15-4-19 7t13 15q15 6 19-6zm63 5q0-13-17-11-16 0-16 11 0 13 17 11 16 0 16-11zm58-10q-2-11-18-9-16 3-14 15t18 8 14-14z" fill="white"/></svg>
+        Sponsor on GitHub
+    </button></a>
+  </div>
+
   <h2>Quick demo</h2>
 
   <fieldset>
