Added disabled button example.

--- a/index.html
+++ b/index.html
@@ -477,6 +477,7 @@ npm install doodle.css
         <input type="button" name="input" value="Input Button">
         <input type="submit" name="submit" value="Submit Button">
         <input type="reset" name="reset" value="Reset Button">
+        <button name="disabledbutton" disabled>Disabled button</button>
       </p>
     </form>
   </section>
